--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <article>
-        <h1>My tasks</h1>
+        <h1>我的任务</h1>
 
         <section id="user-display">
             Loading... Please wait...
